nginx/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-service
  namespace: ingress-nginx
spec:
  ports:
    - name: http  # Added name for port 80
      port: 80
      targetPort: 80
    - name: https  # Added name for port 443
      port: 443
      targetPort: 443
  selector:
    app: nginx-ingress
  type: LoadBalancer
